<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:behavior_peekHeight="64dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/acTestSuggestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:imeOptions="actionSearch"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="5sp"
                    android:maxLength="50"
                    android:hint="@string/hint_name_community"
                    android:inputType="textFilter|textAutoCorrect"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:hint=""
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teManagerNameOfCommunity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:hint="@string/hint_manager_name_of_community" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tePhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_phone"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvAddOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="end"
                android:lineSpacingExtra="2sp"
                android:text="@string/label_add_other"
                android:textColor="#1c75bc"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/ivAddOther"
                app:layout_constraintEnd_toStartOf="@+id/ivAddOther"
                app:layout_constraintTop_toTopOf="@+id/ivAddOther" />

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/ivAddOther"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:srcCompat="@drawable/mas" />

            <Button
                android:id="@+id/btnReady"
                android:layout_width="108dp"
                android:layout_height="38dp"
                android:layout_gravity="right"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/txt_ready"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ivAddOther"
                app:layout_constraintTop_toBottomOf="@+id/tvAddOther"
                app:layout_constraintVertical_bias="0.513" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>