<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:behavior_peekHeight="64dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <Spinner
                android:id="@+id/spSocialNetwork"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/style_spinner_selector"
                android:ems="10"
                android:entries="@array/spinnerRedSocial"
                android:gravity="left|center"
                android:paddingLeft="12dp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spSocialNetwork">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teUserSocial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mi_comunidad_red"
                    android:maxLines="1"
                    android:inputType="text|textEmailAddress|textAutoComplete|textAutoCorrect"
                    android:imeOptions="actionDone"
                    android:maxLength="@integer/max_length_input"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvAddSocialMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="end"
                android:lineSpacingExtra="2sp"
                android:text="@string/label_add_other"
                android:textColor="#1c75bc"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/ivAddSocialMedia"
                app:layout_constraintEnd_toStartOf="@+id/ivAddSocialMedia"
                app:layout_constraintTop_toTopOf="@+id/ivAddSocialMedia" />

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/ivAddSocialMedia"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:srcCompat="@drawable/mas" />

            <Button
                android:id="@+id/btnReady"
                android:layout_width="108dp"
                android:layout_height="38dp"
                android:layout_gravity="right"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/txt_ready"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ivAddSocialMedia"
                app:layout_constraintTop_toBottomOf="@+id/tvAddSocialMedia"
                app:layout_constraintVertical_bias="0.513" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>